fixed footer positioning, added spacing for coloumn titles and made drop down options when creating lessons

--- a/Mel TPI/wwwroot/css/site.css
+++ b/Mel TPI/wwwroot/css/site.css
@@ -24,14 +24,6 @@ body {
     width: 100%;
 }
 
-footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 100px;
-}
-
-
 .contact {
     margin: 0;
     padding: 0;
